fix card-event__content overflow

--- a/src/less/pleio.less
+++ b/src/less/pleio.less
@@ -720,3 +720,7 @@ body.___leraar {
 .___margin-mobile-top {
     margin-top: 2rem;
 }
+
+.card-event__content {
+    overflow: auto;
+}
